DT-452 Fixes HR alignments  on IE

--- a/src/client/styles/landing-page/how-it-works.scss
+++ b/src/client/styles/landing-page/how-it-works.scss
@@ -41,6 +41,7 @@
         width: 25px;
         border-top: 2px solid #609F00;
         margin: 16px 0;
+        text-align: left;
     }
     h3 {
         font-size: 21px;
